--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -1,3 +1,25 @@
-<p>
-  product-form works!
-</p>
+<div class="row">
+  <div class="col-sm-10 offset-md-1">
+    <div class="card card-body">
+      <form (submit)="submitProduct()">
+        <div class="form-group">
+          <input type="text" name="name" [(ngModel)]="product.name"
+                 class="form-control" placeholder="Product name" autofocus>
+        </div>
+        <div class="form-group">
+          <input type="text" name="description" [(ngModel)]="product.description"
+                 class="form-control" placeholder="Product description">
+        </div>
+        <div class="form-group">
+          <input type="text" name="imageUrl" [(ngModel)]="product.imageUrl"
+                  class="form-control" placeholder="Product image url">
+        </div>
+        <div class="form-group">
+          <input type="text" name="price" [(ngModel)]="product.price"
+                  class="form-control" placeholder="Product price">
+        </div>
+        <button class="btn btn-primary btn-block">Save</button>
+      </form>
+    </div>
+  </div>
+</div>
