--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  product-list works!
-</p>
+{{products | json}}
+<br/>
+<br/>
+
+<div *ngFor="let product of products" class="card card-body mb-2">
+  {{product | json}}
+</div>
