--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -18,7 +18,7 @@
             created at: {{product.createdAt}}
         </li>
       </ul>
-      <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-danger" (click)="deleteProduct(product._id)">Delete</button>
       <button class="btn btn-secondary">Edit</button>
     </div>
     <div class="col-md-4">
