--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -19,7 +19,7 @@
         </li>
       </ul>
       <button class="btn btn-danger" (click)="deleteProduct(product._id)">Delete</button>
-      <button class="btn btn-secondary">Edit</button>
+      <button class="btn btn-secondary" [routerLink]="['/product/edit/', product._id]">Edit</button>
     </div>
     <div class="col-md-4">
       <img [src]="product.imageUrl" alt="Image" class="card-img">
